# py-code-hygiene

./: .gitignore  README.md  pycodehygiene.toml.example  pyproject.toml
pycodehygiene/: __main__.py  ai_enrichment.py  analyzer.py  benchmarks.py  cli.py  complexity.py  config.py  discovery.py  duplicates.py  indexer.py  models.py  reachability.py  reference_graph.py  report.py  rules.py  scanner.py  suppressions.py  utils.py
templates/: report_template.html
tests/: test_ai_enrichment.py  test_benchmarks.py  test_cli_output_paths.py  test_cli_scan_output_flags.py  test_complexity.py  test_config.py  test_deadcode_false_positives.py  test_duplicates.py  test_integration.py
