[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-code-hygiene"
version = "0.1.0"
description = "Unified Python dead-code, duplicate, and complexity analyzer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yash-s0" }]
dependencies = [
  "jinja2>=3.1.0",
]
keywords = ["python", "dead-code", "duplicates", "complexity", "static-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
py-code-hygiene = "pycodehygiene.cli:main"

[tool.setuptools]
packages = ["pycodehygiene"]
